--- a/src/Dictionary.css
+++ b/src/Dictionary.css
@@ -2,3 +2,9 @@
     margin-top: 60px;
     margin-bottom: 30px;
 }
+.word {
+
+    text-align: initial;
+    margin-right: 40px;
+    margin-top: 25px;
+}
