--- a/src/App.css
+++ b/src/App.css
@@ -24,7 +24,10 @@
   font-size: calc(10px + 2vmin);
   color: white;
 }
-
+.header {
+  font-size: 40px;
+  font-weight: 800;
+}
 .App-link {
   color: #61dafb;
 }
