--- a/src/Dictionary.css
+++ b/src/Dictionary.css
@@ -2,9 +2,13 @@
     margin-top: 60px;
     margin-bottom: 30px;
 }
-.word {
+.results {
 
     text-align: initial;
     margin-right: 40px;
     margin-top: 25px;
+}
+.phonetics {
+    font-style: italic;
+    color: gray;
 }
