--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 .App {
   text-align: center;
-  background-color: #282c34;
+  background-image:url("universe.jpg");
 }
 
 .App-logo {
@@ -21,11 +21,11 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  color: white;
 }
 .header {
   font-size: 40px;
   font-weight: 800;
+  color: #f1f3f4;
 }
 .App-link {
   color: #61dafb;
@@ -33,6 +33,9 @@
 .codedby {
   text-align: center;
   font-size: 15px;
+  color: white;
+  background-color: #282c34;
+  
 }
 .code {
   color: #61dafb;
